[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/Interface.png" type="Texture" id=1]
[ext_resource path="res://scripts/MenuWindowControl.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 103, 1, 127, 18 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 1, 44, 18 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 22, 78, 18 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 148, 22, 93, 18 )

[node name="MenuWindowControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TetrisBuilder" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 227.0
margin_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 4, 4 )
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 144.0
margin_bottom = 218.0
rect_scale = Vector2( 4, 4 )
action_mode = 0
texture_normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 178.0
margin_bottom = 318.0
rect_scale = Vector2( 4, 4 )
action_mode = 0
texture_normal = SubResource( 3 )

[node name="SupportUsButton" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 400.0
margin_right = 193.0
margin_bottom = 418.0
rect_scale = Vector2( 4, 4 )
action_mode = 0
texture_normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="SupportUsButton" to="." method="_on_SupportUsButton_pressed"]
